Fix error message not showing up

--- a/styles/pages/_migrator.scss
+++ b/styles/pages/_migrator.scss
@@ -196,6 +196,11 @@
       margin-top: 1.25rem;
       padding: 0.5rem;
 
+      label {
+        width: fit-content;
+        display: inline-block;
+      }
+
       .svg {
         flex-shrink: 0;
         margin-right: 0.5rem;
